feat(componentInstance): add context json field

--- a/internal/api/graphql/gqlgen.yml
+++ b/internal/api/graphql/gqlgen.yml
@@ -85,6 +85,9 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  Map:
+    model:
+      - github.com/99designs/gqlgen/graphql.Map
   Issue:
      fields:
        issueVariants:
