--- a/.github/workflows/graphql-inspector.yml
+++ b/.github/workflows/graphql-inspector.yml
@@ -48,9 +48,13 @@ jobs:
           # Write output to a file for reference
           echo "$INSPECTOR_OUTPUT" > schema_changes.txt
 
-          # Extract different types of changes
+          # Extract breaking changes (lines with ✖)
           BREAKING_CHANGES=$(echo "$INSPECTOR_OUTPUT" | grep -E '✖' || echo "")
+          
+          # Extract dangerous changes (lines with ⚠)
           DANGEROUS_CHANGES=$(echo "$INSPECTOR_OUTPUT" | grep -E '⚠' || echo "")
+          
+          # Extract safe changes (lines with ✔)
           SAFE_CHANGES=$(echo "$INSPECTOR_OUTPUT" | grep -E '✔' || echo "")
 
           # Count changes
@@ -64,16 +68,14 @@ jobs:
           echo "$SAFE_CHANGES" > safe_changes.txt
 
           # Set output variables
-          echo "has_breaking_changes=$([[ $BREAKING_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "has_dangerous_changes=$([[ $DANGEROUS_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          echo "has_safe_changes=$([[ $SAFE_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "has_changes=$([[ $BREAKING_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
+          echo "has_any_changes=$([[ $BREAKING_COUNT -gt 0 || $DANGEROUS_COUNT -gt 0 || $SAFE_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
           echo "breaking_count=$BREAKING_COUNT" >> $GITHUB_OUTPUT
           echo "dangerous_count=$DANGEROUS_COUNT" >> $GITHUB_OUTPUT
           echo "safe_count=$SAFE_COUNT" >> $GITHUB_OUTPUT
-          echo "has_any_changes=$([[ $BREAKING_COUNT -gt 0 || $DANGEROUS_COUNT -gt 0 || $SAFE_COUNT -gt 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
 
-      - name: Generate breaking changes report
-        if: steps.schema-check.outputs.has_breaking_changes == 'true'
+      - name: Generate breaking changes report and send Slack notification
+        if: steps.schema-check.outputs.has_any_changes == 'true'
         id: generate-report
         uses: actions/github-script@v6
         with:
@@ -81,21 +83,23 @@ jobs:
           script: |
             const fs = require('fs');
 
-            // Read breaking changes from file
-            let breakingChanges = [];
-            try {
-              const breakingChangesText = fs.readFileSync('breaking_changes.txt', 'utf8');
-              breakingChanges = breakingChangesText.split('\n')
-                .filter(line => line.trim() !== '')
-                .map(line => {
-                  // Clean up the log format
-                  return line.replace(/\[log\] ✖ /, '').trim();
-                });
-            } catch (error) {
-              console.log('Error reading breaking changes file:', error);
-              return;
-            }
+            // Read changes from files
+            const readChanges = (filename) => {
+              try {
+                const content = fs.readFileSync(filename, 'utf8');
+                return content.split('\n')
+                  .filter(line => line.trim() !== '')
+                  .map(line => line.replace(/\[log\] [✖⚠✔] /, '').trim());
+              } catch (error) {
+                return [];
+              }
+            };
 
+            const breakingChanges = readChanges('breaking_changes.txt');
+            const dangerousChanges = readChanges('dangerous_changes.txt');
+            const safeChanges = readChanges('safe_changes.txt');
+
+            // Generate PR comment for breaking changes
             if (breakingChanges.length > 0) {
               const reportHeader = '## ⚠️ Breaking GraphQL Schema Changes Detected';
               const { data: comments } = await github.rest.issues.listComments({
@@ -123,13 +127,57 @@ jobs:
                   issue_number: context.issue.number,
                   body: comment
                 });
-              } else {
-                console.log('A comment with the change report already exists.');
               }
             }
 
+            // Build Slack message
+            const prUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/pull/${context.issue.number}`;
+            const prTitle = context.payload.pull_request.title;
+            const prAuthor = context.payload.pull_request.user.login;
+
+            let slackMessage = `🔄 *GraphQL Schema Changes Detected*\n\n`;
+            slackMessage += `📝 *PR:* <${prUrl}|#${context.issue.number}: ${prTitle}>\n`;
+            slackMessage += `👤 *Author:* ${prAuthor}\n`;
+            slackMessage += `📦 *Repository:* ${context.repo.owner}/${context.repo.repo}\n\n`;
+
+            // Add change details
+            if (breakingChanges.length > 0) {
+              slackMessage += `🚨 *Breaking Changes (${breakingChanges.length}):*\n`;
+              breakingChanges.forEach(change => {
+                slackMessage += `• ${change}\n`;
+              });
+              slackMessage += '\n';
+            }
+
+            if (dangerousChanges.length > 0) {
+              slackMessage += `⚠️ *Dangerous Changes (${dangerousChanges.length}):*\n`;
+              dangerousChanges.forEach(change => {
+                slackMessage += `• ${change}\n`;
+              });
+              slackMessage += '\n';
+            }
+
+            if (safeChanges.length > 0) {
+              slackMessage += `✅ *Safe Changes (${safeChanges.length}):*\n`;
+              safeChanges.forEach(change => {
+                slackMessage += `• ${change}\n`;
+              });
+              slackMessage += '\n';
+            }
+
+            // Add team mentions
+            slackMessage += `👥 *Team:* <@hoda.noori@sap.com> <@a.reuschenbach.puncernau@sap.com> <@taimoor.aslam@sap.com>`;
+
+            // Add approval status for breaking changes
+            if (breakingChanges.length > 0) {
+              slackMessage += `\n\n⚠️ *Action Required:* Breaking changes need approval. Add \`approved-schema-change\` label to approve.`;
+            }
+
+            // Set output for Slack notification
+            core.setOutput('slack_message', slackMessage);
+
       - name: Check for approval label
-        if: steps.schema-check.outputs.has_breaking_changes == 'true'
+        if: steps.schema-check.outputs.has_changes == 'true'
         id: check-label
         uses: actions/github-script@v6
         with:
@@ -150,155 +198,15 @@ jobs:
               core.setOutput('approved', 'false');
             }
 
-      - name: Send Slack notification for schema changes
+      - name: Send notification to Slack
         if: steps.schema-check.outputs.has_any_changes == 'true'
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            
-            // Read change files
-            const readChanges = (filename) => {
-              try {
-                const content = fs.readFileSync(filename, 'utf8');
-                return content.split('\n')
-                  .filter(line => line.trim() !== '')
-                  .map(line => line.replace(/\[log\] [✖⚠✔] /, '').trim());
-              } catch (error) {
-                return [];
-              }
-            };
-
-            const breakingChanges = readChanges('breaking_changes.txt');
-            const dangerousChanges = readChanges('dangerous_changes.txt');
-            const safeChanges = readChanges('safe_changes.txt');
-
-            // Determine message color and priority
-            let color = '#36a64f'; // Green for safe changes
-            let priority = 'Safe';
-            
-            if (breakingChanges.length > 0) {
-              color = '#ff0000'; // Red for breaking changes
-              priority = 'Breaking';
-            } else if (dangerousChanges.length > 0) {
-              color = '#ffaa00'; // Orange for dangerous changes
-              priority = 'Dangerous';
-            }
-
-            // Build Slack message
-            const prUrl = `https://github.com/${context.repo.owner}/${context.repo.repo}/pull/${context.issue.number}`;
-            const prTitle = context.payload.pull_request.title;
-            const prAuthor = context.payload.pull_request.user.login;
-
-            let message = {
-              "attachments": [
-                {
-                  "color": color,
-                  "title": `🔄 GraphQL Schema Changes Detected - ${priority} Priority`,
-                  "title_link": prUrl,
-                  "fields": [
-                    {
-                      "title": "Pull Request",
-                      "value": `<${prUrl}|#${context.issue.number}: ${prTitle}>`,
-                      "short": false
-                    },
-                    {
-                      "title": "Author",
-                      "value": prAuthor,
-                      "short": true
-                    },
-                    {
-                      "title": "Repository",
-                      "value": `${context.repo.owner}/${context.repo.repo}`,
-                      "short": true
-                    }
-                  ]
-                }
-              ]
-            };
-
-            // Add change details
-            let changeText = "";
-            
-            if (breakingChanges.length > 0) {
-              changeText += `🚨 *Breaking Changes (${breakingChanges.length}):*\n`;
-              breakingChanges.forEach(change => {
-                changeText += `• ${change}\n`;
-              });
-              changeText += "\n";
-            }
-            
-            if (dangerousChanges.length > 0) {
-              changeText += `⚠️ *Dangerous Changes (${dangerousChanges.length}):*\n`;
-              dangerousChanges.forEach(change => {
-                changeText += `• ${change}\n`;
-              });
-              changeText += "\n";
-            }
-            
-            if (safeChanges.length > 0) {
-              changeText += `✅ *Safe Changes (${safeChanges.length}):*\n`;
-              safeChanges.forEach(change => {
-                changeText += `• ${change}\n`;
-              });
-            }
-
-            message.attachments[0].text = changeText;
-
-            // Add mentions for team members
-            const mentions = "<@hoda.noori@sap.com> <@a.reuschenbach.puncernau@sap.com> <@taimoor.aslam@sap.com>";
-            message.text = `${mentions} - GraphQL schema changes detected in PR`;
-
-            // Add approval status for breaking changes
-            if (breakingChanges.length > 0) {
-              const approvalStatus = '${{ steps.check-label.outputs.approved }}' === 'true' ? 
-                '✅ *Approved* - Breaking changes have been approved' : 
-                '❌ *Needs Approval* - Add `approved-schema-change` label to approve';
-              
-              message.attachments[0].fields.push({
-                "title": "Approval Status",
-                "value": approvalStatus,
-                "short": false
-              });
-            }
-
-            // Send to Slack
-            const slackPayload = JSON.stringify(message);
-            
-            const https = require('https');
-            const webhookUrl = process.env.SLACK_WEBHOOK_HEUREKA_DEV|| '${{ secrets.SLACK_WEBHOOK_HEUREKA_DEV}}';
-            
-            if (!webhookUrl) {
-              console.log('SLACK_WEBHOOK_HEUREKA_DEVnot configured, skipping Slack notification');
-              return;
-            }
-
-            const url = new URL(webhookUrl);
-            const options = {
-              hostname: url.hostname,
-              port: 443,
-              path: url.pathname,
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json',
-                'Content-Length': Buffer.byteLength(slackPayload)
-              }
-            };
-
-            const req = https.request(options, (res) => {
-              console.log(`Slack notification sent. Status: ${res.statusCode}`);
-            });
-
-            req.on('error', (error) => {
-              console.error('Error sending Slack notification:', error);
-            });
-
-            req.write(slackPayload);
-            req.end();
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_HEUREKA_DEV }}
+          SLACK_MESSAGE: ${{ steps.generate-report.outputs.slack_message }}
 
       - name: Fail if breaking changes are not approved
-        if: steps.schema-check.outputs.has_breaking_changes == 'true' && steps.check-label.outputs.approved != 'true'
+        if: steps.schema-check.outputs.has_changes == 'true' && steps.check-label.outputs.approved != 'true'
         run: |
           echo "❌ Breaking schema changes detected and not approved."
           echo "Please approve the breaking changes by adding the 'approved-schema-change' label to the PR."
@@ -306,7 +214,12 @@ jobs:
           exit 1
 
       - name: Pass check if breaking changes are approved
-        if: steps.schema-check.outputs.has_breaking_changes == 'true' && steps.check-label.outputs.approved == 'true'
+        if: steps.schema-check.outputs.has_changes == 'true' && steps.check-label.outputs.approved == 'true'
         run: |
           echo "✅ Breaking schema changes have been approved with the 'approved-schema-change' label."
           echo "Approved changes: $(cat breaking_changes.txt)"
+
+      - name: Pass check if no breaking changes
+        if: steps.schema-check.outputs.has_changes != 'true'
+        run: |
+          echo "✅ No breaking schema changes detected."
