Send duplicate slack msg

--- a/.github/workflows/graphql-inspector.yml
+++ b/.github/workflows/graphql-inspector.yml
@@ -102,30 +102,15 @@ jobs:
             // Generate PR comment for breaking changes
             if (breakingChanges.length > 0) {
               const reportHeader = '## ⚠️ Breaking GraphQL Schema Changes Detected';
-              
-              // Create a hash of breaking changes to detect duplicates
-              const breakingChangesHash = crypto.createHash('md5')
-                .update(JSON.stringify(breakingChanges.sort()))
-                .digest('hex');
-              
-              const commentMarker = `<!-- BREAKING_CHANGES_HASH:${breakingChangesHash} -->`;
-              
               const { data: comments } = await github.rest.issues.listComments({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number
               });
 
-              const existingComment = comments.find(comment => 
-                comment.body.includes(reportHeader) && comment.body.includes(commentMarker)
-              );
+              const existingComment = comments.find(comment => comment.body.includes(reportHeader));
 
               if (!existingComment) {
-                // Check if there's an old comment with different changes that we should update
-                const oldComment = comments.find(comment => 
-                  comment.body.includes(reportHeader) && !comment.body.includes(commentMarker)
-                );
-
                 let comment = `${reportHeader}\n\n`;
                 comment += 'This PR contains breaking changes to the GraphQL schema that need approval:\n\n';
 
@@ -134,50 +119,14 @@ jobs:
                 }
 
                 comment += '\n### Approval Process\n\n';
-                comment += 'To approve these breaking changes, add the `approved-schema-change` label to this PR.\n\n';
-                comment += commentMarker;
+                comment += 'To approve these breaking changes, add the `approved-schema-change` label to this PR.';
 
-                if (oldComment) {
-                  // Update existing comment with new changes
-                  await github.rest.issues.updateComment({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    comment_id: oldComment.id,
-                    body: comment
-                  });
-                  console.log('Updated existing breaking changes comment with new changes');
-                } else {
-                  // Create new comment
-                  await github.rest.issues.createComment({
-                    owner: context.repo.owner,
-                    repo: context.repo.repo,
-                    issue_number: context.issue.number,
-                    body: comment
-                  });
-                  console.log('Created new breaking changes comment');
-                }
-              } else {
-                console.log('A comment with the same breaking changes already exists, skipping PR comment update');
-              }
-            } else {
-              // If no breaking changes, remove any existing breaking changes comment
-              const { data: comments } = await github.rest.issues.listComments({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number
-              });
-
-              const existingComment = comments.find(comment => 
-                comment.body.includes('## ⚠️ Breaking GraphQL Schema Changes Detected')
-              );
-
-              if (existingComment) {
-                await github.rest.issues.deleteComment({
+                await github.rest.issues.createComment({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
-                  comment_id: existingComment.id
+                  issue_number: context.issue.number,
+                  body: comment
                 });
-                console.log('Removed breaking changes comment as no breaking changes exist anymore');
               }
             }
 
@@ -216,55 +165,13 @@ jobs:
               slackMessage += '\n';
             }
 
-            // Add team mentions
-            slackMessage += `👥 *Team:* <@hoda.noori@sap.com> <@a.reuschenbach.puncernau@sap.com> <@taimoor.aslam@sap.com>`;
-
             // Add approval status for breaking changes
             if (breakingChanges.length > 0) {
               slackMessage += `\n\n⚠️ *Action Required:* Breaking changes need approval. Add \`approved-schema-change\` label to approve.`;
             }
 
-            // Create a unique hash of the changes to detect duplicates
-            const crypto = require('crypto');
-            const changesHash = crypto.createHash('md5')
-              .update(JSON.stringify({
-                breaking: breakingChanges.sort(),
-                dangerous: dangerousChanges.sort(),
-                safe: safeChanges.sort()
-              }))
-              .digest('hex');
-
-            // Check if we've already sent a Slack notification for these exact changes
-            const slackNotificationMarker = `<!-- SLACK_NOTIFICATION_SENT:${changesHash} -->`;
-            
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number
-            });
-
-            const existingSlackNotification = comments.find(comment => 
-              comment.body.includes(slackNotificationMarker)
-            );
-
-            if (existingSlackNotification) {
-              console.log('Slack notification already sent for these changes, skipping duplicate notification');
-              core.setOutput('skip_slack', 'true');
-              core.setOutput('slack_message', '');
-            } else {
-              console.log('New changes detected, will send Slack notification');
-              
-              // Add hidden marker comment to track that we've sent the notification
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: `${slackNotificationMarker}\n<!-- This comment tracks Slack notifications to prevent duplicates -->`
-              });
-
-              core.setOutput('skip_slack', 'false');
-              core.setOutput('slack_message', slackMessage);
-            }
+            // Set output for Slack notification
+            core.setOutput('slack_message', slackMessage);
 
       - name: Check for approval label
         if: steps.schema-check.outputs.has_changes == 'true'
@@ -289,7 +196,7 @@ jobs:
             }
 
       - name: Send notification to Slack
-        if: steps.schema-check.outputs.has_any_changes == 'true' && steps.generate-report.outputs.skip_slack != 'true'
+        if: steps.schema-check.outputs.has_any_changes == 'true'
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_HEUREKA_DEV }}
