fix(componentInstance): update json type k8s genqlient

--- a/scanner/k8s-assets/client/genqlient.yaml
+++ b/scanner/k8s-assets/client/genqlient.yaml
@@ -10,5 +10,5 @@ generated: generated.go
 package: client
 use_struct_references: true
 bindings:
-  Map:
+  Json:
     type: "map[string]interface{}"
