--- a/scanner/k8s-assets/client/genqlient.yaml
+++ b/scanner/k8s-assets/client/genqlient.yaml
@@ -9,3 +9,6 @@ operations:
 generated: generated.go
 package: client
 use_struct_references: true
+bindings:
+  Json:
+    type: "map[string]interface{}"
