fix(k8s-scanner): set container type (#731)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -46,7 +46,7 @@
                 "seed"
             ],
             "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/.env-devcontainer",
+            "envFile": "${workspaceFolder}/.env",
             "showLog": true
         }
     ]
