--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
     "go.testEnvFile": "${workspaceFolder}/.testenv-devcontainer",
-    "go.gopath": "/Users/i545293/.gvm/pkgsets/go1.24.1/global",
-    "go.goroot": "/Users/i545293/.gvm/gos/go1.24.1",
-    "ginkgotestexplorer.ginkgoPath": "/Users/i545293/.gvm/pkgsets/go1.24.1/global/bin/ginkgo"
+    "ginkgotools.ginkgoPath": "go run github.com/onsi/ginkgo/v2/ginkgo"
 }
