--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,10 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+
+
+
         {
             "name": "Launch K8sScanner",
             "type": "go",
@@ -42,7 +46,7 @@
                 "seed"
             ],
             "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/.env-devcontainer",
+            "envFile": "${workspaceFolder}/.env",
             "showLog": true
         }
     ]
